--- a/public/pdf.html
+++ b/public/pdf.html
@@ -174,8 +174,8 @@
                         <li class="level-1 page-item">
                           <a href="#2-present-practice-9">9. Demystifying Mist Lining<span class="contributor">
                               —
-                              <span class="quire-contributor">Kate Seymour, Joanna Strombek and Jos van Och
-                                van Och</span></span></a>
+                              <span class="quire-contributor">Kate Seymour, Joanna Strombek and Jos van
+                                Och</span></span></a>
                         </li>
                         <li class="level-1 page-item">
                           <a href="#2-present-practice-10">10. Linking Past and Future: Forty Years a Liner in
@@ -254,7 +254,7 @@
                             Development on Laboratory Practice in the Structural
                             Treatment of Paintings over Four Decades<span class="contributor">
                               —
-                              <span class="quire-contributor">Debra Daly Hartin, Eric Hagan and Stefan W.
+                              <span class="quire-contributor">Eric Hagan, Debra Daly Hartin and Stefan W.
                                 Michalski</span></span></a>
                         </li>
                         <li class="level-1 page-item">
@@ -313,8 +313,8 @@
                             from New Spain: The Case of the Apostolate Series of
                             Atizapan, Mexico<span class="contributor">
                               —
-                              <span class="quire-contributor">Claudia Alejandra Garza Villegas and Naitzá
-                                Santiago Gómez</span></span></a>
+                              <span class="quire-contributor">Naitzá Santiago Gómez and Claudia Alejandra
+                                Garza Villegas</span></span></a>
                         </li>
                       </ol>
                     </li>
@@ -440,7 +440,7 @@
                             Contemporary Paintings and Their Appearance after
                             Twenty-One Years<span class="contributor">
                               —
-                              <span class="quire-contributor">Stefan W. Michalski and Mary Piper Hough</span></span></a>
+                              <span class="quire-contributor">Mary Piper Hough and Stefan W. Michalski</span></span></a>
                         </li>
                       </ol>
                     </li>
@@ -520,9 +520,9 @@
                             the Biological, Chemical, and Mechanical Performance
                             of Glue-Paste-Lined Paintings<span class="contributor">
                               —
-                              <span class="quire-contributor">Nicolas Bouillon, Fabien Fohrer, Laura
-                                Fuster-López, Cecil Krarup Andersen, Matteo
-                                Rossi-Doria, Mikkel Scharff, Kate Seymour, Ángel
+                              <span class="quire-contributor">Cecil Krarup Andersen, Nicolas Bouillon, Fabien
+                                Fohrer, Laura Fuster-López, Matteo Rossi-Doria,
+                                Mikkel Scharff, Kate Seymour, Ángel
                                 Vicente-Escuder, Sofía Vicente-Palomino and
                                 Dolores J. Yusà-Marco</span></span></a>
                         </li>
@@ -585,8 +585,8 @@
                             of Painted Canvas Supports: A Proposal of Minimal
                             Intervention Protocols<span class="contributor">
                               —
-                              <span class="quire-contributor">Alicia Sánchez Ortiz and Emanuel Sterp
-                                Moga</span></span></a>
+                              <span class="quire-contributor">Emanuel Sterp Moga and Alicia Sánchez
+                                Ortiz</span></span></a>
                         </li>
                         <li class="level-1 page-item">
                           <a href="#8-posters-60">60. Structural Conservation Issues with European
@@ -606,8 +606,8 @@
                           <a href="#8-posters-62">62. Investigating Commercially Primed Contemporary
                             Artist Canvases<span class="contributor">
                               —
-                              <span class="quire-contributor">Ruby Awburn, Anne Carter, Lynn Chua, Filzah
-                                Mohd Amir, Joey Ng and Gillian Osmond</span></span></a>
+                              <span class="quire-contributor">Filzah Mohd Amir, Ruby Awburn, Anne Carter,
+                                Lynn Chua, Joey Ng and Gillian Osmond</span></span></a>
                         </li>
                         <li class="level-1 page-item">
                           <a href="#8-posters-63">63. Stabilization Processing of Canvas Paintings
@@ -962,8 +962,7 @@
                     <li class="level-1 page-item">
                       <a href="#2-present-practice-9">9. Demystifying Mist Lining<span class="contributor">
                           —
-                          <span class="quire-contributor">Kate Seymour, Joanna Strombek and Jos van Och van
-                            Och</span></span></a>
+                          <span class="quire-contributor">Kate Seymour, Joanna Strombek and Jos van Och</span></span></a>
                     </li>
                     <li class="level-1 page-item">
                       <a href="#2-present-practice-10">10. Linking Past and Future: Forty Years a Liner in
@@ -1046,7 +1045,7 @@
                     <span class="quire-contributor__name">Joanna Strombek</span>
                   </li>
                   <li class="quire-contributor" id="undefined">
-                    <span class="quire-contributor__name">Jos van Och van Och</span>
+                    <span class="quire-contributor__name">Jos van Och</span>
                   </li>
                 </ul>
               </div>
@@ -1244,7 +1243,7 @@
                         Development on Laboratory Practice in the Structural
                         Treatment of Paintings over Four Decades<span class="contributor">
                           —
-                          <span class="quire-contributor">Debra Daly Hartin, Eric Hagan and Stefan W.
+                          <span class="quire-contributor">Eric Hagan, Debra Daly Hartin and Stefan W.
                             Michalski</span></span></a>
                     </li>
                     <li class="level-1 page-item">
@@ -1410,10 +1409,10 @@
               <div class="quire-page__header__contributor">
                 <ul class="quire-contributors-list name-title align-left">
                   <li class="quire-contributor" id="undefined">
-                    <span class="quire-contributor__name">Debra Daly Hartin</span>
+                    <span class="quire-contributor__name">Eric Hagan</span>
                   </li>
                   <li class="quire-contributor" id="undefined">
-                    <span class="quire-contributor__name">Eric Hagan</span>
+                    <span class="quire-contributor__name">Debra Daly Hartin</span>
                   </li>
                   <li class="quire-contributor" id="undefined">
                     <span class="quire-contributor__name">Stefan W. Michalski</span>
@@ -1529,8 +1528,8 @@
                         New Spain: The Case of the Apostolate Series of
                         Atizapan, Mexico<span class="contributor">
                           —
-                          <span class="quire-contributor">Claudia Alejandra Garza Villegas and Naitzá
-                            Santiago Gómez</span></span></a>
+                          <span class="quire-contributor">Naitzá Santiago Gómez and Claudia Alejandra Garza
+                            Villegas</span></span></a>
                     </li>
                   </ol>
                 </div>
@@ -1660,10 +1659,10 @@
               <div class="quire-page__header__contributor">
                 <ul class="quire-contributors-list name-title align-left">
                   <li class="quire-contributor" id="undefined">
-                    <span class="quire-contributor__name">Claudia Alejandra Garza Villegas</span>
+                    <span class="quire-contributor__name">Naitzá Santiago Gómez</span>
                   </li>
                   <li class="quire-contributor" id="undefined">
-                    <span class="quire-contributor__name">Naitzá Santiago Gómez</span>
+                    <span class="quire-contributor__name">Claudia Alejandra Garza Villegas</span>
                   </li>
                 </ul>
               </div>
@@ -2191,7 +2190,7 @@
                         Paintings and Their Appearance after Twenty-One
                         Years<span class="contributor">
                           —
-                          <span class="quire-contributor">Stefan W. Michalski and Mary Piper Hough</span></span></a>
+                          <span class="quire-contributor">Mary Piper Hough and Stefan W. Michalski</span></span></a>
                     </li>
                   </ol>
                 </div>
@@ -2262,10 +2261,10 @@
               <div class="quire-page__header__contributor">
                 <ul class="quire-contributors-list name-title align-left">
                   <li class="quire-contributor" id="undefined">
-                    <span class="quire-contributor__name">Stefan W. Michalski</span>
+                    <span class="quire-contributor__name">Mary Piper Hough</span>
                   </li>
                   <li class="quire-contributor" id="undefined">
-                    <span class="quire-contributor__name">Mary Piper Hough</span>
+                    <span class="quire-contributor__name">Stefan W. Michalski</span>
                   </li>
                 </ul>
               </div>
@@ -2365,11 +2364,11 @@
                         Biological, Chemical, and Mechanical Performance of
                         Glue-Paste-Lined Paintings<span class="contributor">
                           —
-                          <span class="quire-contributor">Nicolas Bouillon, Fabien Fohrer, Laura
-                            Fuster-López, Cecil Krarup Andersen, Matteo
-                            Rossi-Doria, Mikkel Scharff, Kate Seymour, Ángel
-                            Vicente-Escuder, Sofía Vicente-Palomino and Dolores
-                            J. Yusà-Marco</span></span></a>
+                          <span class="quire-contributor">Cecil Krarup Andersen, Nicolas Bouillon, Fabien
+                            Fohrer, Laura Fuster-López, Matteo Rossi-Doria,
+                            Mikkel Scharff, Kate Seymour, Ángel Vicente-Escuder,
+                            Sofía Vicente-Palomino and Dolores J.
+                            Yusà-Marco</span></span></a>
                     </li>
                     <li class="level-1 page-item">
                       <a href="#8-posters-52">52. The Structural Treatment of Titian’s
@@ -2425,7 +2424,7 @@
                         Canvas Supports: A Proposal of Minimal Intervention
                         Protocols<span class="contributor">
                           —
-                          <span class="quire-contributor">Alicia Sánchez Ortiz and Emanuel Sterp Moga</span></span></a>
+                          <span class="quire-contributor">Emanuel Sterp Moga and Alicia Sánchez Ortiz</span></span></a>
                     </li>
                     <li class="level-1 page-item">
                       <a href="#8-posters-60">60. Structural Conservation Issues with European Easel
@@ -2445,8 +2444,8 @@
                       <a href="#8-posters-62">62. Investigating Commercially Primed Contemporary
                         Artist Canvases<span class="contributor">
                           —
-                          <span class="quire-contributor">Ruby Awburn, Anne Carter, Lynn Chua, Filzah Mohd
-                            Amir, Joey Ng and Gillian Osmond</span></span></a>
+                          <span class="quire-contributor">Filzah Mohd Amir, Ruby Awburn, Anne Carter, Lynn
+                            Chua, Joey Ng and Gillian Osmond</span></span></a>
                     </li>
                     <li class="level-1 page-item">
                       <a href="#8-posters-63">63. Stabilization Processing of Canvas Paintings
@@ -2747,6 +2746,9 @@
               <div class="quire-page__header__contributor">
                 <ul class="quire-contributors-list name-title align-left">
                   <li class="quire-contributor" id="undefined">
+                    <span class="quire-contributor__name">Cecil Krarup Andersen</span>
+                  </li>
+                  <li class="quire-contributor" id="undefined">
                     <span class="quire-contributor__name">Nicolas Bouillon</span>
                   </li>
                   <li class="quire-contributor" id="undefined">
@@ -2754,9 +2756,6 @@
                   </li>
                   <li class="quire-contributor" id="undefined">
                     <span class="quire-contributor__name">Laura Fuster-López</span>
-                  </li>
-                  <li class="quire-contributor" id="undefined">
-                    <span class="quire-contributor__name">Cecil Krarup Andersen</span>
                   </li>
                   <li class="quire-contributor" id="undefined">
                     <span class="quire-contributor__name">Matteo Rossi-Doria</span>
@@ -3001,10 +3000,10 @@
               <div class="quire-page__header__contributor">
                 <ul class="quire-contributors-list name-title align-left">
                   <li class="quire-contributor" id="undefined">
-                    <span class="quire-contributor__name">Alicia Sánchez Ortiz</span>
+                    <span class="quire-contributor__name">Emanuel Sterp Moga</span>
                   </li>
                   <li class="quire-contributor" id="undefined">
-                    <span class="quire-contributor__name">Emanuel Sterp Moga</span>
+                    <span class="quire-contributor__name">Alicia Sánchez Ortiz</span>
                   </li>
                 </ul>
               </div>
@@ -3079,6 +3078,9 @@
               <div class="quire-page__header__contributor">
                 <ul class="quire-contributors-list name-title align-left">
                   <li class="quire-contributor" id="undefined">
+                    <span class="quire-contributor__name">Filzah Mohd Amir</span>
+                  </li>
+                  <li class="quire-contributor" id="undefined">
                     <span class="quire-contributor__name">Ruby Awburn</span>
                   </li>
                   <li class="quire-contributor" id="undefined">
@@ -3086,9 +3088,6 @@
                   </li>
                   <li class="quire-contributor" id="undefined">
                     <span class="quire-contributor__name">Lynn Chua</span>
-                  </li>
-                  <li class="quire-contributor" id="undefined">
-                    <span class="quire-contributor__name">Filzah Mohd Amir</span>
                   </li>
                   <li class="quire-contributor" id="undefined">
                     <span class="quire-contributor__name">Joey Ng</span>
