Add tables for papers 18–50, and 54–63

--- a/content/_assets/images/tables/table-56-3.html
+++ b/content/_assets/images/tables/table-56-3.html
@@ -1,367 +1,23 @@
-<p>Table 56.1. ATR-FTIR results of the analysis of canvas thread samples from 16 banners and 1 interstitial canvas.</p>
-
-<table >
-<tbody>
-<tr>
-<td colspan="7"><p><strong>Materials added to fibers of banner and epitaph fabric</strong></td>
-</tr>
-
-<tr>
-<td><strong>Sample banners/epitaphs</strong></td>
-<td>Proteic compound</td>
-<td>Lipids</td>
-<td>Kaolin</td>
-<td>Gypsum</td>
-<td>Calcium carbonate</td>
-<td>Calcium oxalate</td>
-</tr>
-
-<tr>
-<td>2</td>
-<td>+</td>
-<td> </td>
-<td> </td>
-<td> </td>
-<td> </td>
-<td> </td>
-</tr>
-
-<tr>
-<td>3</td>
-<td>(+)</td>
-<td>+</td>
-<td>+</td>
-<td> </td>
-<td> </td>
-<td> </td>
-</tr>
-
-<tr>
-<td>4</td>
-<td>(+)</td>
-<td>+</td>
-<td>+</td>
-<td> </td>
-<td> </td>
-<td> </td>
-</tr>
-
-<tr>
-<td>5</td>
-<td>+</td>
-<td>+</td>
-<td> </td>
-<td> </td>
-<td> </td>
-<td> </td>
-</tr>
-
-<tr>
-<td>6</td>
-<td>+</td>
-<td>+</td>
-<td> </td>
-<td> </td>
-<td> </td>
-<td> </td>
-</tr>
-
-<tr>
-<td>7</td>
-<td>+</td>
-<td>+</td>
-<td> </td>
-<td> </td>
-<td> </td>
-<td>+</td>
-</tr>
-
-<tr>
-<td>8</td>
-<td>(+)</td>
-<td>+</td>
-<td>(+)</td>
-<td> </td>
-<td> </td>
-<td> </td>
-</tr>
-
-<tr>
-<td>9</td>
-<td>+</td>
-<td> </td>
-<td> </td>
-<td> </td>
-<td> </td>
-<td> </td>
-</tr>
-
-<tr>
-<td>10</td>
-<td>+</td>
-<td> </td>
-<td> </td>
-<td> </td>
-<td> </td>
-<td>+</td>
-</tr>
-
-<tr>
-<td>12</td>
-<td>+</td>
-<td> </td>
-<td> </td>
-<td>+</td>
-<td> </td>
-<td>+</td>
-</tr>
-
-<tr>
-<td>14</td>
-<td>+</td>
-<td>+</td>
-<td> </td>
-<td> </td>
-<td>+</td>
-<td> </td>
-</tr>
-
-<tr>
-<td>15</td>
-<td>+</td>
-<td> </td>
-<td> </td>
-<td> </td>
-<td> </td>
-<td> </td>
-</tr>
-
-<tr>
-<td>16</td>
-<td>+</td>
-<td> </td>
-<td> </td>
-<td> </td>
-<td>+</td>
-<td> </td>
-</tr>
-
-<tr>
-<td>17</td>
-<td>+</td>
-<td> </td>
-<td> </td>
-<td> </td>
-<td> </td>
-<td> </td>
-</tr>
-
-<tr>
-<td>22</td>
-<td>+</td>
-<td> </td>
-<td> </td>
-<td> </td>
-<td> </td>
-<td> </td>
-</tr>
-
-</tbody>
-</table>
-
-<p><em>Note:</em> FTIR was done by Cristina Carșote.</p>
-
-<p>Table 56.2. Adhesive and consolidant formulas tested on double-sided painted banners and epitaphs dating from the eighteenth and nineteenth centuries.</p>
-
-<table >
-<tbody>
-<tr>
-<td colspan="2"><p>Compounds for adhesive/consolidant solutions</td>
-<td>Solution (% or w/w)</td>
-<td>Solvent 1/w for 100 g</td>
-<td>Solvent 2/w for 100 g</td>
-<td>Prewetting of the surface prior to application</td>
-<td>Readhesion of loose paint flakes</td>
-<td>Impregnation,stabilization of decohesive paint</td>
-<td>Electric conductivity</td>
-</tr>
-
-<tr>
-<td> </td>
-<td  colspan="8" ></td>
-</tr>
-
-<tr>
-<td colspan="2"><p>Celluforce NCC CNC</td>
-<td>1%</td>
-<td>DIW 99</td>
-<td>—</td>
-<td>Yes, DIW:IMS (1:1)</td>
-<td>—</td>
-<td></td>
-<td>174 µS/cm</td>
-</tr>
-
-<tr>
-<td colspan="2"><p>PVOH:</p>
-
-<p>Mowiol 4-88</td>
-<td>10%</td>
-<td>DIW 90</td>
-<td>—</td>
-<td>Yes, DIW:IMS (1:1)</td>
-<td></td>
-<td></td>
-<td>—</td>
-</tr>
-
-<tr>
-<td colspan="2"><p>Aquazol 200</td>
-<td>10%</td>
-<td>Isopropanol 90</td>
-<td>—</td>
-<td>Yes; DIW:IMS (1:1)</td>
-<td></td>
-<td></td>
-<td>—</td>
-</tr>
-
-<tr>
-<td colspan="2"><p>Aquazol 200</td>
-<td>5%</td>
-<td>Isopropanol 47.5</td>
-<td>Naphtha 47.5</td>
-<td>No</td>
-<td>—</td>
-<td></td>
-<td>—</td>
-</tr>
-
-<tr>
-<td colspan="2"><p>Plexisol P550 (30%)</td>
-<td>5%</td>
-<td>—</td>
-<td>Naphtha 95</td>
-<td>No</td>
-<td>—</td>
-<td></td>
-<td>—</td>
-</tr>
-
-<tr>
-<td colspan="2"><p>Paraloid B72 5% BAC + Aquazol 200 10% IP</td>
-<td>9:1</td>
-<td>Butyl acetate</p>
-
-<p>95</td>
-<td>IP 90</td>
-<td>No</td>
-<td>—</td>
-<td></td>
-<td>—</td>
-</tr>
-
-<tr>
-<td colspan="2"><p>Methocel A4M</td>
-<td>2%</td>
-<td>DIW 98</td>
-<td>—</td>
-<td>Yes; DIW:IMS (1:1)</td>
-<td>—</td>
-<td></td>
-<td>198 µS/cm</td>
-</tr>
-
-<tr>
-<td colspan="2"><p>Culminal 2000</td>
-<td>3%</td>
-<td>DIW 48.5</td>
-<td>IP 48.5</td>
-<td>Yes, nonpolar solvent for surface sealing</td>
-<td></td>
-<td>—</td>
-<td>79 µS/cm</td>
-</tr>
-
-<tr>
-<td colspan="2"><p><a name="_heading=h.gjdgxs"></a>Aquazol 500:</p>
-
-<p>Culminal 2000</td>
-<td>1:1 w/w</td>
-<td>Isopropanol 56.25</td>
-<td>DIWater 32.25</td>
-<td>Yes, nonpolar solvent for surface sealing</td>
-<td></td>
-<td>—</td>
-<td>—</td>
-</tr>
-
-<tr>
-<td colspan="2"><p>Aquazol 500</td>
-<td>20%</td>
-<td>Isopropanol 64</td>
-<td>DIWater 16</td>
-<td>Yes, DIW:IMS (1:1)</td>
-<td></td>
-<td>—</td>
-<td>—</td>
-</tr>
-
-<tr>
-<td colspan="2"><p>Aquazol 500 + Celluforce NCC CNC*</p>
-
-</td>
-<td>1:1 w/w</td>
-<td>Isopropanol40</td>
-<td>DIWater 72</td>
-<td>Yes, DIW:IMS (1:1)</td>
-<td></td>
-<td></td>
-<td>—</td>
-</tr>
-
-<tr>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-</tr>
-
-</tbody>
-</table>
-
-<p>*1 part by weight of Aquazol 500 (20%) solution in 4:1 of isopropanol to deionized water, plus 1 part by weight nanocellulose (1%) in deionized water.</p>
-
-<p>Abbreviations: BAC = butyl acetate; CNC = cellulose nanocrystals; DIW = deionized water; IMS = industrial methylated spirits; IP = isopropanol</p>
-
-<br>
-  <p><a name="_Hlk105077633">Table 56.3. Painted double-sided banners and epitaphs in the study. </a></p>
-
- <table > <thead> <tr>
-<td colspan="2"> </td>
-<td><strong>Face A</strong></td>
-<td><strong>Face B</strong></td>
-<td><strong>Dimensions</strong></td>
-<td><strong>Lappets/streamers </strong></td>
-<td><strong>Date/<br>
-provenance</strong></td>
-<td><strong>Canvas weave count<br>
-per (cm<sup>2</sup>) </strong></td>
-<td><strong>Horizontal wooden suspension pole (<em>drug)</em> </strong></td>
-</tr>
-
+<table>
+<caption>
+  <strong>Table 56.3</strong><br />
+  <strong>Painted double-sided banners and epitaphs in the study</strong>
+</caption>
+<thead>
+  <tr>
+    <th>No.</th>
+    <th>Location<sup>*</sup></th>
+    <th>Face A</th>
+    <th>Face B</th>
+    <th>Dimensions</th>
+    <th>Lappets/streamers </th>
+    <th>Date/provenance</th>
+    <th>Canvas weave count<br />
+    per (cm<sup>2</sup>) </th>
+    <th>Horizontal wooden suspension pole (<em>drug</em>)</th>
+  </tr>
 </thead>
 <tbody>
-<tr>
-<td><strong>No.</strong></td>
-<td><strong>Location<sup>*</sup></strong></td>
-<td colspan="7"> </td>
-</tr>
 
 <tr>
 <td><strong>1</strong></td>
@@ -380,11 +36,10 @@ per (cm<sup>2</sup>) </strong></td>
 <td><strong>MBT</strong></td>
 <td>The Virgin Mary as Empress of the Heavenly Hosts with Jesus Christ Child, Star, Triangle. Medallion with St. H. Nicholas of Myra, 5 Cherubs</td>
 <td>Holy Archangels Michael and Gabriel, sun and moon, medallion with St. Paraskeve of the Balkans, 5 Cherubs</td>
-<td>157 × 130 cm</p>
-
-<p>Canvas: 114 cm</td>
+<td>157 × 130 cm<br />
+  Canvas: 114 cm</td>
 <td>3, oval, cherubs</td>
-<td>1848<br>
+<td>1848<br />
 Poeni, Timiș county</td>
 <td>14 × 18</td>
 <td>Profiled (3 bulbs), painted red.</td>
@@ -397,7 +52,7 @@ Poeni, Timiș county</td>
 <td>Coronation of the Virgin Mary with medallions of Saint Ap. Peter and Paul,2 floral ornaments, lappets: 3 Evanghelists,</td>
 <td>144 × 107 cm</td>
 <td>3, oval; central lappet broken</td>
-<td>1876<br>
+<td>1876<br />
 Poeni, Timiș county</td>
 <td>14 × 16</td>
 <td>Lost</td>
@@ -410,7 +65,7 @@ Poeni, Timiș county</td>
 <td>Theophany-Baptism of Jesus Christ, flanked by the Mother of God with Christ Child and St. Paraskeve of the Balkans, on the lappets: St. H. Nicholas of Myra, St. H. John Chrisostomos,(St. H. Basil the Great), St. H. Gregory Bogoslov.</td>
 <td>142 × 108 cm</td>
 <td>4, not distinguishable; one lappet lost</td>
-<td>1812<br>
+<td>1812<br />
 Poeni, Timiș county</td>
 <td>15 × 15</td>
 <td>Lost</td>
@@ -421,11 +76,10 @@ Poeni, Timiș county</td>
 <td><strong>MBT</strong></td>
 <td>Saint Apostles Peter and Paul, 2 Seraphs, 2 Cherubs. Lappets: 3 Seraphs</td>
 <td>Coronation of the Virgin Mary, 4 Seraphs, on the lappets: 3 Seraphs</td>
-<td>93 × 89 cm</p>
-
-<p>Canvas: 75 cm</td>
+<td>93 × 89 cm<br />
+  Canvas: 75 cm</td>
 <td>3, oval, seraphs</td>
-<td>1881<br>
+<td>1881<br />
 (Crivina de Sus, Timiș county)</td>
 <td>12 × 12</td>
 <td>Profiled, 3 bulbs.</td>
@@ -436,10 +90,10 @@ Poeni, Timiș county</td>
 <td><strong>MBT</strong></td>
 <td>Mother of God flanked by 4 seraphs.Lappets: 3 seraphim;</td>
 <td>Nativity of the Virgin Mary, flanked by 4 seraphs</td>
-<td>90 × 90 cm<br>
+<td>90 × 90 cm<br />
 Canvas: 77 cm</td>
 <td>3, oval, seraphs; central lappet missing</td>
-<td>1882<br>
+<td>1882<br />
 Crivina de Sus, /Timiș</td>
 <td>13 × 13</td>
 <td>Profiled, 3 bulbs</td>
@@ -452,7 +106,7 @@ Crivina de Sus, /Timiș</td>
 <td>Coronation of the Theotokos, flanked by 2 archangels</td>
 <td>137 × 107 cm</td>
 <td>4, rectangular shape lappets; 1 missing</td>
-<td>1867<br>
+<td>1867<br />
 Poeni, Timiș county</td>
 <td>8 × 10</td>
 <td>Lost</td>
@@ -463,11 +117,10 @@ Poeni, Timiș county</td>
 <td><strong>MBT</strong></td>
 <td>Mother of God with Jesus Christ Child and Cherub</td>
 <td>Holy Trinity, with medallion and inscription</td>
-<td>73 × 73 cm</p>
-
-<p>Canvas: 54 cm</td>
+<td>73 × 73 cm<br />
+  Canvas: 54 cm</td>
 <td>Pennant has the shape of a chalice</td>
-<td>1848<br>
+<td>1848<br />
 Hezeriș, Timiș county</td>
 <td>14 × 14</td>
 <td>Profiled, masterful fixing system of the canvas to the wooden pole</td>
@@ -490,11 +143,10 @@ Hezeriș, Timiș county</td>
 <td><strong>MBT</strong></td>
 <td>Theophany, Baptism of Jesus Christ</td>
 <td>Archangel Michael. Lappets: St. Paraskeve of the Balkans, St. Nicholas of Myra, St. Demetrios</td>
-<td>132 × 102 cm</p>
-
-<p>Canvas: 92 cm</td>
+<td>132 × 102 cm<br />
+  Canvas: 92 cm</td>
 <td>3, rectangular shape, saints</td>
-<td>1777<br>
+<td>1777<br />
 Zolt, Timiș county</td>
 <td>13 × 8</td>
 <td>Wooden pole</td>
@@ -615,10 +267,9 @@ Zolt, Timiș county</td>
 <td>Saint M. Tryphon and St. Paraskeve of the Balkans</td>
 <td>108 × 85 cm</td>
 <td>7, triangular-shape</td>
-<td>1848<br>
-Socu, Gorj county</p>
-
-<p>Authors: George, Kostandin, Kostandin</td>
+<td>1848<br />
+Socu, Gorj county<br />
+Authors: George, Kostandin, Kostandin</td>
 <td>11 × 13</td>
 <td>Original shape of the wooden pole to which the textile is sawn around with a rope</td>
 </tr>
@@ -630,7 +281,7 @@ Socu, Gorj county</p>
 <td>Photographic detail from the scenes of the Parables of Jesus Christ.</td>
 <td>—</td>
 <td>—</td>
-<td>1806<br>
+<td>1806<br />
 Curtea, Timiș county</td>
 <td>—</td>
 <td>—</td>
@@ -677,9 +328,8 @@ Curtea, Timiș county</td>
 <td><strong>MBT</strong></td>
 <td>Theotokos with Jesus Christ Child</td>
 <td>Holy Trinity</td>
-<td>79 × 56 cm</p>
-
-<p>Canvas: 65 cm</td>
+<td>79 × 56 cm<br />
+  Canvas: 65 cm</td>
 <td>The pennant has the shape of a chalice; lappet missing</td>
 <td>Pogănești, Timiș county</td>
 <td>—</td>
@@ -688,8 +338,6 @@ Curtea, Timiș county</td>
 
 </tbody>
 </table>
-
-<p>Abbreviations: MBT = Museum of the Orthodox Archdiocese of Timișoara, MArT= Timișoara Museum of Art, Private = private collectio</p>
-
- <br>
-  @font-face {font-family:Wingdings; panose-1:5 0 0 0 0 0 0 0 0 0; mso-font-charset:77; mso-generic-font-family:decorative; mso-font-pitch:variable; mso-font-signature:3 268435456 0 0 -2147483647 0;}@font-face {font-family:"Cambria Math"; panose-1:2 4 5 3 5 4 6 3 2 4; mso-font-charset:0; mso-generic-font-family:roman; mso-font-pitch:variable; mso-font-signature:-536870145 1107305727 0 0 415 0;}@font-face {font-family:Calibri; panose-1:2 15 5 2 2 2 4 3 2 4; mso-font-charset:0; mso-generic-font-family:swiss; mso-font-pitch:variable; mso-font-signature:-469750017 -1073732485 9 0 511 0;}p.MsoNormal, li.MsoNormal, div.MsoNormal {mso-style-unhide:no; mso-style-qformat:yes; mso-style-parent:""; margin-top:0in; margin-right:0in; margin-bottom:8.0pt; margin-left:0in; line-height:107%; mso-pagination:widow-orphan; font-size:11.0pt; font-family:"Calibri",sans-serif; mso-ascii-font-family:Calibri; mso-ascii-theme-font:minor-latin; mso-fareast-font-family:Calibri; mso-fareast-theme-font:minor-latin; mso-hansi-font-family:Calibri; mso-hansi-theme-font:minor-latin; mso-bidi-font-family:"Times New Roman"; mso-bidi-theme-font:minor-bidi;}.MsoChpDefault {mso-style-type:export-only; mso-default-props:yes; font-size:11.0pt; mso-ansi-font-size:11.0pt; mso-bidi-font-size:11.0pt; font-family:"Calibri",sans-serif; mso-ascii-font-family:Calibri; mso-ascii-theme-font:minor-latin; mso-fareast-font-family:Calibri; mso-fareast-theme-font:minor-latin; mso-hansi-font-family:Calibri; mso-hansi-theme-font:minor-latin; mso-bidi-font-family:"Times New Roman"; mso-bidi-theme-font:minor-bidi;}.MsoPapDefault {mso-style-type:export-only; margin-bottom:8.0pt; line-height:107%;}div.WordSection1 {page:WordSection1;}div.WordSection2 {page:WordSection2;}
+<div class="table-key">
+  <p>Abbreviations: MBT = Museum of the Orthodox Archdiocese of Timișoara, MArT= Timișoara Museum of Art, Private = private collectio</p>
+</div>
