Fix html validation issues in tables

--- a/content/_assets/images/tables/table-11-2.html
+++ b/content/_assets/images/tables/table-11-2.html
@@ -5,9 +5,9 @@
 </caption>
 <thead>
   <tr>
-  <th rowspan="2"><p>Sample </th>
-  <th rowspan="2"><p>Resin mixture</th>
-  <th colspan="6"><p>Temperature</th>
+  <th rowspan="2">Sample </th>
+  <th rowspan="2">Resin mixture</th>
+  <th colspan="6">Temperature</th>
   </tr>
 
   <tr>
