--- a/content/_assets/images/tables/table-17-3.html
+++ b/content/_assets/images/tables/table-17-3.html
@@ -14,21 +14,17 @@
 <tbody>
 
  <tr>
- <td><p>Zonarez </p>
-
-<p>B-85S</td>
- <td><p>Limonene monomer (C<sub>10</sub>H<sub>16</sub>), dimer (C<sub>20</sub>H<sub>32</sub>), and trimer (C<sub>30</sub>H<sub>48</sub>)</td>
- <td><p>3–10</td>
- <td><p>136, 272, 408</td>
+ <td>Zonarez B-85S</td>
+ <td>Limonene monomer (C<sub>10</sub>H<sub>16</sub>), dimer (C<sub>20</sub>H<sub>32</sub>), and trimer (C<sub>30</sub>H<sub>48</sub>)</td>
+ <td>3–10</td>
+ <td>136, 272, 408</td>
  </tr>
 
  <tr>
- <td><p>Piccolyte </p>
-
-<p>S-85S</td>
- <td><p>Limonene monomer (C<sub>10</sub>H<sub>16</sub>), dimer (C<sub>20</sub>H<sub>32</sub>), and trimer (C<sub>30</sub>H<sub>48</sub>)</td>
- <td><p>3–10</td>
- <td><p>136, 272, 408</td>
+ <td>Piccolyte S-85S</td>
+ <td>Limonene monomer (C<sub>10</sub>H<sub>16</sub>), dimer (C<sub>20</sub>H<sub>32</sub>), and trimer (C<sub>30</sub>H<sub>48</sub>)</td>
+ <td>3–10</td>
+ <td>136, 272, 408</td>
  </tr>
 
  </tbody>
