--- a/content/_assets/images/tables/table-4-1.html
+++ b/content/_assets/images/tables/table-4-1.html
@@ -46,9 +46,9 @@
  </tr>
 
  <tr>
- <td rowspan="2"><p><em>Lady with a Parasol (Femme à l’ombrelle),</em> Edgar Germain Hilaire Degas, ca. 1870–72</td>
+ <td rowspan="2"><em>Lady with a Parasol (Femme à l’ombrelle),</em> Edgar Germain Hilaire Degas, ca. 1870–72</td>
  <td>P.1978.PG.87</td>
- <td rowspan="2"><p>The Courtauld Gallery, Princes Gate Bequest</td>
+ <td rowspan="2">The Courtauld Gallery, Princes Gate Bequest</td>
  <td>1981</td>
  <td>Strip lined with Beva 371 and Permawear 122</td>
  </tr>
@@ -76,9 +76,9 @@
  </tr>
 
  <tr>
- <td rowspan="2"><p><em>The Siege of Malta: Siege and Bombardment of St Michael, 28 June 1565,</em> Matteo Perez, ca. 1656</td>
- <td rowspan="2"><p>BHC0255</td>
- <td rowspan="2"><p>Royal Museums Greenwich, National Maritime Museum Collection</td>
+ <td rowspan="2"><em>The Siege of Malta: Siege and Bombardment of St Michael, 28 June 1565,</em> Matteo Perez, ca. 1656</td>
+ <td rowspan="2">BHC0255</td>
+ <td rowspan="2">Royal Museums Greenwich, National Maritime Museum Collection</td>
  <td>1967</td>
  <td>Lined with wax resin onto linen</td>
  </tr>
