--- a/content/_assets/images/tables/table-40-1.html
+++ b/content/_assets/images/tables/table-40-1.html
@@ -1,6 +1,6 @@
 <table>
 <caption>
- <strong>Table 40.1<br />
+ <strong>Table 40.1</strong><br />
  <strong>Summary of treatment results</strong>
 </caption>
 <thead>
