--- a/content/_assets/images/tables/table-54-1.html
+++ b/content/_assets/images/tables/table-54-1.html
@@ -1,10 +1,8 @@
 <table>
 <caption>
   <strong>Table 54.1</strong><br />
-  <strong><p>Relaxation of cupping and quilting—treatment steps</strong>
+  <strong>Relaxation of cupping and quilting—treatment steps</strong>
 </caption>
-<thead>
-</thead>
 <tbody>
 
 <tr>
