--- a/content/_assets/images/tables/table-17-2.html
+++ b/content/_assets/images/tables/table-17-2.html
@@ -14,46 +14,40 @@
 <tbody>
 
  <tr>
- <td><p>Unbleached beeswax</td>
- <td><p>Odd-numbered hydrocarbons (peak at C<sub>27</sub>H<sub>56</sub>)</p>
-
-<p>Fatty acids (most peak at C<sub>24</sub>H<sub>48</sub>O<sub>2</sub>)</td>
- <td><p>24–25 </p>
-
-<p>(peak)</td>
- <td><p>71, 74</td>
+ <td>Unbleached beeswax</td>
+ <td>Odd-numbered hydrocarbons (peak at C<sub>27</sub>H<sub>56</sub>)<br /><br />
+   Fatty acids (most peak at C<sub>24</sub>H<sub>48</sub>O<sub>2</sub>)</td>
+ <td>24–25 (peak)</td>
+ <td>71, 74</td>
  </tr>
 
  <tr>
- <td><p>Multiwax </p>
-
-<p>W-445s</td>
- <td><p>Odd- and even-numbered hydrocarbons (peak at C<sub>33</sub>H<sub>68 </sub>or C<sub>34</sub>H<sub>70</sub>)</td>
- <td><p>28–29</td>
- <td><p>71</td>
+ <td>Multiwax W-445s</td>
+ <td>Odd- and even-numbered hydrocarbons (peak at C<sub>33</sub>H<sub>68 </sub>or C<sub>34</sub>H<sub>70</sub>)</td>
+ <td>28–29</td>
+ <td>71</td>
  </tr>
 
  <tr>
- <td><p>Dammars</td>
- <td><p>5-dammarenolic acid methyl ester (C<sub>31</sub>H<sub>52</sub>O<sub>3</sub>)</td>
- <td><p>29–30</td>
- <td><p>454</td>
+ <td>Dammars</td>
+ <td>5-dammarenolic acid methyl ester (C<sub>31</sub>H<sub>52</sub>O<sub>3</sub>)</td>
+ <td>29–30</td>
+ <td>454</td>
  </tr>
 
  <tr>
- <td><p>Colophony</td>
- <td><p>Dehydroabietic acid (C<sub>20</sub>H<sub>28</sub>O<sub>2</sub>)</p>
-
-<p>7-oxo-dehydroabietic acid (C<sub>20</sub>H<sub>26</sub>O<sub>3</sub>)</td>
- <td><p>21–24</td>
- <td><p>316, 328</td>
+ <td>Colophony</td>
+ <td>Dehydroabietic acid (C<sub>20</sub>H<sub>28</sub>O<sub>2</sub>)<br /><br />
+   7-oxo-dehydroabietic acid (C<sub>20</sub>H<sub>26</sub>O<sub>3</sub>)</td>
+ <td>21–24</td>
+ <td>316, 328</td>
  </tr>
 
  <tr>
- <td><p>Gum elemi</td>
- <td><p>α-amyrin / β-amyrin (C<sub>30</sub>H<sub>50</sub>O)</td>
- <td><p>29–30</td>
- <td><p>426</td>
+ <td>Gum elemi</td>
+ <td>α-amyrin / β-amyrin (C<sub>30</sub>H<sub>50</sub>O)</td>
+ <td>29–30</td>
+ <td>426</td>
  </tr>
 
  </tbody>
