Add tables with shortcodes, and implement basic styling

--- a/content/_assets/images/tables/table-17-1.html
+++ b/content/_assets/images/tables/table-17-1.html
@@ -14,7 +14,7 @@
 
 <tr>
   <td>
-    <p><strong><em>Sun Setting, Denmark</em></strong<br />
+    <p><strong><em>Sun Setting, Denmark</em></strong><br />
      William H. Johnson, ca. 1930, oil on burlap<br />
      Lined to linen (1969)<br />
      Accession: 1967.59.720</p>
@@ -41,7 +41,7 @@
 
 <tr>
   <td>
-    <p><strong><em>Oak Trees</em></strong<br />
+    <p><strong><em>Oak Trees</em></strong><br />
      Edward M. Bannister, 1876, oil on canvas<br />
      Lined to fiberglass (1983)<br />
      Accession: 1983.95.155</p>
@@ -66,7 +66,7 @@
 
 <tr>
   <td>
-    <p><strong><em>Cagnes-sur-Mer</em></strong<br />
+    <p><strong><em>Cagnes-sur-Mer</em></strong><br />
      William H. Johnson, ca. 1928–29, oil on burlap<br />
      Lined to unidentified textile (1971)<br />
      Accession: 1967.59.702</p>
@@ -91,7 +91,7 @@
 
 <tr>
   <td>
-    <p><strong><em>The Lesson</em></strong<br />
+    <p><strong><em>The Lesson</em></strong><br />
      Hugo Ballin, 1907, oil on canvas<br />
      Lined to unidentified textile (1979)<br />
      Accession: 1910.9.1</p>
@@ -115,7 +115,7 @@
 
 <tr>
   <td>
-    <p><strong><em>Plenty</em></strong<br />
+    <p><strong><em>Plenty</em></strong><br />
      Kenyon Cox, 1910, oil on canvas<br />
      Lined to fiberglass (1974)<br />
      Accession: 1910.9.6</p>
@@ -139,7 +139,7 @@
 
 <tr>
   <td>
-    <p><strong><em>The Windmill</em></strong<br />
+    <p><strong><em>The Windmill</em></strong><br />
      Jenne Magafan, ca. 1937, oil on canvas<br />
      Lined to unidentified textile (1979)<br />
      Accession: 1971.447.66</p>
