--- a/content/_assets/images/tables/table-21-1.html
+++ b/content/_assets/images/tables/table-21-1.html
@@ -48,6 +48,6 @@
 </table>
 
 <div class="table-key">
-  <p><em>Source:</em> {{Mehra 1972}} (verbatim).</p>
-  <p>*<em>Relining</em> means lining; see {{Andersen 2012}}.</p>
+  <p><em>Source:</em> [[Mehra 1972]] (verbatim).</p>
+  <p>*<em>Relining</em> means lining; see [[Andersen 2012]].</p>
 </div>
