--- a/content/_assets/images/tables/table-3-1.html
+++ b/content/_assets/images/tables/table-3-1.html
@@ -6,7 +6,7 @@
 <thead>
   <tr>
    <th></th>
-   <th>>Mehra 1972*</th>
+   <th>Mehra 1972*</th>
    <th>Hacke 1979<sup>†</sup></th>
   </tr>
 </thead>
