--- a/content/_assets/images/tables/table-51-1.html
+++ b/content/_assets/images/tables/table-51-1.html
@@ -20,14 +20,15 @@
 
  <tr>
  <td>Open-weave washed linen fabric: 9 × 9 threads/cm<sup>2</sup> (CTS 2297)</td>
- <td colspan="2"><img src="table-51-1_pic-1.jpg" alt="Detail of open-weave linen fabric at 10 times magnifcation" /></td>
- <td colspan="4"><img src="table-51-1_pic-2.jpg" alt="Detail of open-weave linen fabric at 25 times magnifcation" /></td>
+ <td colspan="2"><img src="/_assets/images/tables/table-51-1_pic-1.jpg" alt="Detail of open-weave linen fabric at 10 times magnifcation" /></td>
+ <td colspan="4"><img src="/_assets/images/tables/table-51-1_pic-2.jpg" alt="Detail of open-weave linen fabric at 25 times magnifcation" /></td>
  </tr>
+
 
  <tr>
  <td>Close-weave washed linen fabric: 15 × 15 threads/cm<sup>2</sup> (CTS 1111)</td>
- <td colspan="2"><img src="table-51-1_pic-3.jpg" alt="Detail of closed-weave linen fabric at 10 times magnifcation" /></td>
- <td colspan="4"><img src="table-51-1_pic-4.jpg" alt="Detail of closed-weave linen fabric at 10 times magnifcation" /></td>
+ <td colspan="2"><img src="/_assets/images/tables/table-51-1_pic-3.jpg" alt="Detail of closed-weave linen fabric at 10 times magnifcation" /></td>
+ <td colspan="4"><img src="/_assets/images/tables/table-51-1_pic-4.jpg" alt="Detail of closed-weave linen fabric at 10 times magnifcation" /></td>
  </tr>
 
 </tbody>
@@ -52,9 +53,8 @@
  <td>Hide glue</td>
  <td>Kremer 63010</td>
  <td>Pellets</td>
- <td colspan="2"  >240–250</td>
+ <td colspan="2">240–250</td>
  <td>80 mPA</td>
- <td></td>
  </tr>
 
 </tbody>
