--- a/content/_assets/images/tables/table-62-2.html
+++ b/content/_assets/images/tables/table-62-2.html
@@ -61,5 +61,5 @@
 </table>
 
 <div class="table-key">
-  <p><em>Source: </em>{{Penzel, Rieger, and Schneider 1997}}</p>
+  <p><em>Source: </em>[[Penzel, Rieger, and Schneider 1997]]</p>
 </div>
