Refine table scales and clean-ups

--- a/content/_assets/images/tables/table-35-2.html
+++ b/content/_assets/images/tables/table-35-2.html
@@ -10,7 +10,7 @@
   </tr>
 
   <tr>
-    <th>>Hide glue</th>
+    <th>Hide glue</th>
     <th>Sturgeon glue</th>
     <th>Aquazol</th>
     <th>Plexisol P550</th>
