--- a/content/_assets/images/tables/table-50-1.html
+++ b/content/_assets/images/tables/table-50-1.html
@@ -55,7 +55,7 @@
  <td>7</td>
  <td>Dammar resin</td>
  <td>2</td>
- <td><a name="_Hlk101543834">Colophony</a></td>
+ <td>Colophony</td>
  <td colspan="2">1</td>
  </tr>
 
