Make more formatting cleanups for pdf

--- a/content/_assets/images/tables/table-3-1.html
+++ b/content/_assets/images/tables/table-3-1.html
@@ -82,8 +82,6 @@
 
 <div class="table-key">
   <p>Sources:</p>
-  <dl>
-    <dt>*</dt><dd>{Scharff 1980|, 1: 23}</dd>
-    <dt><sup>†</sup></dt><dd>Compiled by students based on {Hacke 1976}, {Hacke 1978}, and the 1979 seminar given by Hacke. (Translated from Danish by the author.)</dd>
-  </dl>
+  <p>* {Scharff 1980|, 1: 23}</p>
+  <p><sup>†</sup> Compiled by students based on {Hacke 1976}, {Hacke 1978}, and the 1979 seminar given by Hacke. (Translated from Danish by the author.)</p>
 </div>
