--- a/content/_assets/images/tables/table-11-2.html
+++ b/content/_assets/images/tables/table-11-2.html
@@ -7,7 +7,7 @@
   <tr>
   <th rowspan="2">Sample </th>
   <th rowspan="2">Resin mixture</th>
-  <th colspan="6">Temperature</th>
+  <th colspan="5">Temperature</th>
   </tr>
 
   <tr>
@@ -29,7 +29,6 @@
 <td>W</td>
 <td>W</td>
 <td>W</td>
-<td></td>
 </tr>
 
 <tr>
@@ -40,7 +39,6 @@
 <td>G</td>
 <td>G</td>
 <td>G</td>
-<td></td>
 </tr>
 
 <tr>
@@ -51,7 +49,6 @@
 <td>W</td>
 <td>S</td>
 <td>S</td>
-<td></td>
 </tr>
 
 <tr>
@@ -62,7 +59,6 @@
 <td style="color: red;">S</td>
 <td style="color: red;">G</td>
 <td>G</td>
-<td></td>
 </tr>
 
 <tr>
@@ -73,7 +69,6 @@
 <td>G</td>
 <td>G</td>
 <td>G</td>
-<td></td>
 </tr>
 
 <tr>
@@ -84,7 +79,6 @@
 <td>G</td>
 <td>G</td>
 <td>G</td>
-<td></td>
 </tr>
 
 <tr>
@@ -95,14 +89,13 @@
 <td>G</td>
 <td>G</td>
 <td>E</td>
-<td></td>
 </tr>
 
 </tbody>
 </table>
 <div class="table-key">
-  <p><em>Notes:</em> </p>
-  <p>Adhesion by vacuum bag (700 mbar) and constant heat for 10 mins at different temperatures.</p>
-  <p>W = Weak, S = Sufficient, G = Good, E = Excellent</p>
-  <p><em>Source:</em> {Orata 2013}. Used with permission.</p>
+  <p><em>Notes:</em><br />
+  Adhesion by vacuum bag (700 mbar) and constant heat for 10 mins at different temperatures.<br />
+  W = Weak, S = Sufficient, G = Good, E = Excellent<br />
+  <em>Source:</em> {Orata 2013}. Used with permission.</p>
 </div>
