Fix scattered issues from initial editorial review

--- a/content/_assets/images/tables/table-56-3.html
+++ b/content/_assets/images/tables/table-56-3.html
@@ -339,5 +339,5 @@ Curtea, Timiș county</td>
 </tbody>
 </table>
 <div class="table-key">
-  <p>Abbreviations: MBT = Museum of the Orthodox Archdiocese of Timișoara, MArT= Timișoara Museum of Art, Private = private collectio</p>
+  <p>Abbreviations: MBT = Museum of the Orthodox Archdiocese of Timișoara, MArT= Timișoara Museum of Art, Private = private collection</p>
 </div>
