--- a/content/_assets/images/tables/table-29-2.html
+++ b/content/_assets/images/tables/table-29-2.html
@@ -88,7 +88,7 @@
  <tr>
  <td>Pattina L 13 puro lino (pure linen)</td>
  <td>Tessitura Enrico Sironi</td>
- <td>Weave structure analysis presented by {Flock 2020|, 451}.</td>
+ <td>Weave structure analysis presented by {Flock 2020a|, 451}.</td>
  </tr>
 
  </tbody>
